--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,2 +1,16 @@
 en:
-  hello: "Hello world"
+  hello_world: "Hello world"
+  application:
+  flash_logged_in_user_danger: "Please log in."
+  sessions:
+    new:
+      login: "Log in"
+      password: "Password"
+      form_submit: "Sign up now!"
+      new_user?: "New user?"
+      remember_text: "Remember me on this computer"
+      forgot_password: "(forgot password)"
+    invalid_login: "Invalid email/password combination"
+  layouts:
+    header:
+      Sign_out: "Sign out"
