--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -93,3 +93,45 @@ jp:
       note: "注意"
       remove: "削除"
       submit: "保存"
+  projects:
+    project_not_found: "プロジェクトが見つかりません!"
+    show:
+      Project_Detail: "プロジェクトの詳細"
+      Project_Member: "プロジェクトメンバー"
+      Project_Health: "プロジェクトの健全性"
+    project_detail:
+      project_name: "プロジェクト名"
+      project_description: "プロジェクトの説明"
+      project_status: "プロジェクトのステータス"
+      project_group: "プロジェクトグループ"
+      project_start_date: "プロジェクトの開始日"
+      project_end_date: "プロジェクトの終了日"
+      project_language: "プロジェクト言語"
+      project_repository: "リポジトリリンク"
+      project_redmine: "Redmineのリンク"
+      project_folder: "プロジェクトフォルダー"
+      project_customers: "顧客情報"
+    project_member:
+      Project_Member: "プロジェクトメンバー"
+      Add_New: "新規追加"
+      Member_name: "メンバー名"
+      Role: "役割"
+      Github_Account: "Githubアカウント"
+      joined_at: "参加時間"
+      left_at: "終了時間"
+      action: "アクション"
+    project_health:
+      health_item_name: "健康項目名"
+      status: "状態"
+  status_1: "適用されていない"
+  status_2: "すでに適用されていますが、完全には更新されていません"
+  status_3: "完全に適用および更新されました"
+  environment_0: "開発間"
+  environment_１: "本番"
+  project_environments:
+    project_environment:
+      ip_address: "IPアドレス"
+      domain: "ドメイン"
+      port: "ローカルポート"
+      web_server: "ウェブサーバー"
+      note: "ノート"
