--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -14,6 +14,7 @@ vi:
   layouts:
     header:
       Sign_out: "Đăng xuất"
+      profile_account: "Hồ sơ & tài khoản"
   user_mailer:
     password_reset:
       subject: "Đặt lại mật khẩu"
@@ -69,3 +70,16 @@ vi:
       detail: "Chi tiết"
       date: "Ngày tháng"
       date_invalid: "Định dạng ngày không hợp lệ"
+  users:
+    update:
+      flash_update_success: "Cập nhật thành công"
+      flash_update_danger: "Cập nhật thất bại"
+    edit:
+      submit: "Cập nhật"
+      title: "Cập nhật người dùng"
+    form:
+      submit: "Gửi"
+      name: "Tên"
+      password: "Mật khẩu"
+      password_confirmation: "Xác nhận lại mật khẩu"
+  not_found_user: "Không tìm thấy người dùng"
