--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -57,3 +57,39 @@ jp:
       password: "パスワード"
       password_confirmation: "パスワードの確認"
   not_found_user: "ユーザーが見つかりません"
+  project:
+    new_project: "新しいプロジェクト"
+    create_success: "プロジェクトの作成に成功しました！"
+    create_fail: "プロジェクトの作成に失敗しました！"
+    form:
+      name: "名前"
+      description: "説明"
+      status:
+        status: "状態"
+        new: "新しい"
+        in_progress: "進行中"
+        maintaining: "維持"
+        close: "閉じた"
+        pending: "保留中"
+      group: "グループ"
+      start_date: "開始日"
+      end_date: "終了日"
+      language: "言語"
+      link_repo: "リンクリポ"
+      link_redmine: "リンクRedmine"
+      folder_project: "フォルダプロジェクト"
+      customer_info: "顧客情報"
+      select_status: "-- ステータスを選択 --"
+      project_detail: "プロジェクトの詳細"
+      project_enviroment: "プロジェクトの環境"
+      environment:
+        production: "生産"
+        staging: "ステージング"
+      select_enviroment: "-- 環境を選択 --"
+      ip_address: "IPアドレス"
+      domain: "ドメイン"
+      port: "ポート"
+      web_server: "Webサーバー"
+      note: "注意"
+      remove: "削除"
+      submit: "保存"
