feate:Add Projects

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -83,3 +83,46 @@ en:
       password: "Password"
       password_confirmation: "Password confirmation"
   not_found_user: "not found user"
+  project:
+    new_project: "New project"
+    create_success: "Create project success!"
+    create_fail: "Create project fail!"
+    form:
+      name: "Name"
+      please_enter_name: "Please enter project's name"
+      description: "Description"
+      please_enter_description: "Please enter project's description"
+      status:
+        status: "Status"
+        new: "New"
+        in_progress: "In progress"
+        maintaining: "Maintaining"
+        close: "Closed"
+        pending: "Pending"
+      group: "Group"
+      please_enter_group: "Please enter project's group"
+      start_date: "Start date"
+      end_date: "End date"
+      language: "Language"
+      please_enter_language: "Please enter project's language"
+      link_repo: "Link repository"
+      link_redmine: "Link Redmine"
+      please_enter_link: "Please enter %{name}'s link"
+      folder_project: "Folder project"
+      please_enter_folder: "Please enter project's folder"
+      customer_info: "Customer infomation"
+      please_enter_customer_info: "Please enter project's customer"
+      select_status: "-- Select status --"
+      project_detail: "Project's detail"
+      project_enviroment: "Project's enviroment"
+      enviroment:
+        production: "Production"
+        staging: "Staging"
+      select_enviroment: "-- Select enviroment --"
+      ip_address: "IP address"
+      domain: "Domain"
+      port: "Port"
+      web_server: "Web server"
+      note: "Note"
+      remove: "Remove"
+      submit: "Save"
