--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -83,3 +83,46 @@ vi:
       password: "Mật khẩu"
       password_confirmation: "Xác nhận lại mật khẩu"
   not_found_user: "Không tìm thấy người dùng"
+  project:
+    new_project: "Dự án mới"
+    create_success: "Tạo dự án thành công"
+    create_fail: "Tạo dự án thất bại"
+    form:
+      name: "Tên"
+      please_enter_name: "Vui lòng nhập tên dự án"
+      description: "Mô tả"
+      please_enter_description: "Vui lòng nhập mô tả dự án"
+      status:
+        status: "Trạng thái"
+        new: "Mới"
+        in_progress: "Đang tiến hành"
+        maintaining: "Bảo trì"
+        close: "Đóng"
+        pending: "Đang chờ"
+      group: "Nhóm"
+      please_enter_group: "Vui lòng nhập nhóm dự án"
+      start_date: "Ngày bắt đầu"
+      end_date: "Ngày kết thúc"
+      language: "Ngôn ngữ"
+      please_enter_language: "Vui lòng nhập ngôn ngữ"
+      link_repo: "Link repository"
+      link_redmine: "Link Redmine"
+      please_enter_link: "Vui lòng nhập link %{name}"
+      folder_project: "Thư mục dự án"
+      please_enter_folder: "Vui lòng nhập thư mục dự án"
+      customer_info: "Thông tin khách hàng"
+      please_enter_customer_info: "Vui lòng nhập thông tin khách hàng"
+      select_status: "-- Chọn trạng thái --"
+      project_detail: "Chi tiết dự án"
+      project_enviroment: "Môi trường dự án"
+      enviroment:
+        production: "Production"
+        staging: "Staging"
+      select_enviroment: "-- Chọn môi trường --"
+      ip_address: "Địa chỉ IP"
+      domain: "Tên miền"
+      port: "Cổng"
+      web_server: "Web server"
+      note: "Ghi chú"
+      remove: "Xóa"
+      submit: "Lưu"
