--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,11 @@ en:
   hello_world: "Hello world"
   application:
   flash_logged_in_user_danger: "Please log in."
+  flash_verify_admin_danger: "You are not authorized to access this page."
+  flash_verify_manager_danger: "You are not authorized to access this page."
+  flash_verify_psm_danger: "You are not authorized to access this page."
+  flash_verify_creator_project_danger: "You are not authorized to access this page."
+  project_not_found: "Project not found."
   sessions:
     new:
       login: "Log in"
@@ -89,7 +94,7 @@ en:
       completed: "Completed"
       pending: "Pending"
       maintaining: "Maintaining"
-      news: "New"
+      new: "New"
       close: "Close"
     project_not_found: "Project not found!"
     show:
@@ -120,6 +125,12 @@ en:
     project_health:
       health_item_name: "Health item name"
       status: "Status"
+    destroy:
+        delete_success: "Project was successfully destroyed."
+        delete_fail: "Cannot delete project with reports."
+        fail_delete: "This project has not been deleted."
+    cannot_delete: "You cannot delete this project. Only managers and administrators have the authority to delete projects."
+    you_sure?: "You sure?"
   users:
     update:
       flash_update_success: "Update successful"
@@ -173,7 +184,7 @@ en:
   status_2: "Already applied but not fully updated"
   status_3: "Fully applied and updated"
   environment_0: "Staging"
-  environment_１: "Production"
+  environment_1: "Production"
   project_environments:
     project_environment:
       ip_address: "IP address"
