--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -2,6 +2,8 @@ jp:
   hello_world: "こんにちは世界"
   application:
   flash_logged_in_user_danger: "ログインしてください。"
+  flash_verify_admin_danger: "このページにアクセスする権限がありません。"
+  flash_verify_manager_danger: "このページにアクセスする権限がありません。"
   sessions:
     new:
       login: "ログイン"
