--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -2,6 +2,8 @@ vi:
   hello_world: "Xin chào cả thế giới!"
   application:
   flash_logged_in_user_danger: "Hãy đăng nhập trước đó"
+  flash_verify_admin_danger: "Bạn không có quyền truy cập trang này"
+  flash_verify_manager_danger: "Bạn không có quyền truy cập trang này"
   sessions:
     new:
       login: "Đăng nhập"
