--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -131,7 +131,11 @@ jp:
         delete_fail: "レポートを含むプロジェクトは削除できません。"
         fail_delete: "このプロジェクトは削除されていません。"
     cannot_delete: "このプロジェクトは削除できません。 マネージャーと管理者のみがプロジェクトを削除する権限を持っています。"
+    cannot_edit: "このプロジェクトは編集できません。 プロジェクトを編集する権限を持つのはマネージャーと管理者だけです。"
     you_sure?: "あなたは確かに？"
+    update:
+      update_success: "プロジェクト情報が正常に更新されました。"
+      update_fail: "失敗したプロジェクトの情報を更新します。"
   users:
     update:
       flash_update_success: "更新に成功"
